test/types/file/closedWithoutOpen.good
closedWithoutOpen.chpl:3: error: halt reached - Operation attempted on an invalid file
