test/types/file/closedWithoutOpen.chpl
var f : file;

f.close();
